--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,5 +1,6 @@
-name: Build Docker images (step-3)
+name: CI — Build & push Docker images
 
+# Trigger on push to main/master (adjust branches if needed)
 on:
   push:
     branches:
@@ -8,29 +9,45 @@ on:
 
 permissions:
   contents: read
-  packages: write
+  packages: write   # allows GITHUB_TOKEN to push to GHCR
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+    environment: production
+
     steps:
-      - name: Checkout repo
+      # 1) Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up QEMU (for cross-platform builds)
+      # 2) QEMU for cross-platform builds
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
+      # 3) Buildx for advanced builds
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to GitHub Container Registry
+      # 4) Login to GHCR (recommended)
+      - name: Login to GitHub Container Registry (GHCR)
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push backend image
+      # 5) Optional: login to Docker Hub if secrets are present
+      - name: Login to Docker Hub (optional)
+        if: ${{ secrets.DOCKERHUB_USERNAME && secrets.DOCKERHUB_TOKEN }}
+        uses: docker/login-action@v2
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # 6) Build & push backend image
+      - name: Build & push backend
         uses: docker/build-push-action@v4
         with:
           context: ./backend
@@ -39,3 +56,18 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:backend-${{ github.sha }}
             ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:backend-latest
+            ${{ secrets.DOCKERHUB_USERNAME && format('docker.io/{0}/{1}:backend-{2}', secrets.DOCKERHUB_USERNAME, github.repository, github.sha) }}
+            ${{ secrets.DOCKERHUB_USERNAME && format('docker.io/{0}/{1}:backend-latest', secrets.DOCKERHUB_USERNAME, github.repository) }}
+
+      # 7) Build & push frontend image
+      - name: Build & push frontend
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:frontend-${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:frontend-latest
+            ${{ secrets.DOCKERHUB_USERNAME && format('docker.io/{0}/{1}:frontend-{2}', secrets.DOCKERHUB_USERNAME, github.repository, github.sha) }}
+            ${{ secrets.DOCKERHUB_USERNAME && format('docker.io/{0}/{1}:frontend-latest', secrets.DOCKERHUB_USERNAME, github.repository) }}
